# ByteForge-Engine

./: .gitignore  CMakeLists.txt  main.cpp
assets/shaders/: forward_lighting.frag  forward_lighting.vert  triangles.frag  triangles.vert
config/: editor_layout.ini
demo/: .gitignore  dub.json  dub.selections.json
demo/source/: app.d  lib_test.d  mixins_test.d  reflection_test.d
demos/benchmarks/: CMakeLists.txt
demos/benchmarks/src/: cpu_benchmark.cpp  cpu_benchmark.hpp  main.cpp
demos/development/: CMakeLists.txt  readme.md
demos/development/src/: main.cpp
demos/development/src/components/: bob_component.cpp  bob_component.hpp  export_test_component.hpp  lifetime_component.cpp  lifetime_component.hpp  light_component.cpp  light_component.hpp  mesh_renderer_component.cpp  mesh_renderer_component.hpp  player_controller.cpp  player_controller.hpp
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
dep/imgui/: CMakeLists.txt
dep/rpmalloc-1.4.5/: CMakeLists.txt
dep/rpmalloc-1.4.5/rpmalloc/: malloc.c  rpmalloc.c  rpnew.h
docs/: porting.md  resource idea.txt  roadmap.md  todo.md
forge/: .gitignore  dub.json  dub.selections.json
forge/config/: arg_parser.cpp  arg_parser.hpp
forge/container/: array.hpp  hash.hpp  map.hpp  set.hpp  string.hpp  string_id.hpp  view.hpp  virtual_array.hpp
forge/core/: engine.cpp  engine.hpp  engine_init_options.hpp  forge_intrinsic.hpp  isub_system.hpp  logging.hpp  time.cpp  time.hpp
forge/ecs/: component_field.hpp  ecs.cpp  ecs.hpp  ecs_views.hpp  transform.hpp
forge/editor/: editor_subsystem.cpp  editor_subsystem.hpp
forge/events/: signal.hpp  timer.cpp  timer.hpp  type_box.hpp
forge/fmt/: fmt.cpp  fmt.hpp
forge/framework/: input.cpp  input.hpp  mesh_loading.cpp  mesh_loading.hpp
forge/framework/components/: camera_component.cpp  camera_component.hpp  light_component.cpp  light_component.hpp  mesh_primitive_component.cpp  mesh_primitive_component.hpp  mesh_renderer_component.cpp  mesh_renderer_component.hpp  register_engine_components.cpp  register_engine_components.hpp
forge/graphics/: camera.cpp  camera.hpp  lights.hpp  material.hpp  mesh.cpp  mesh.hpp  mesh_generator.cpp  mesh_generator.hpp  mesh_primitives.hpp  render_object.hpp
forge/graphics/image/: image.cpp  image.hpp
forge/graphics/loaders/: gltf.cpp  gltf.hpp  gltf_loader.cpp  gltf_loader.hpp  mesh_load_options.hpp  mesh_loader.hpp
forge/graphics/ogl_renderer/: gl_buffers.cpp  gl_buffers.hpp  ogl_buffers.cpp  ogl_buffers.hpp  ogl_renderer.cpp  ogl_renderer.hpp  ogl_shader.cpp  ogl_shader.hpp  ogl_texture.cpp  ogl_texture.hpp  render_resource.hpp
forge/gui/: imgui_subsystem.cpp  imgui_subsystem.hpp
forge/math/: extents.hpp  rotator.cpp  rotator.hpp  transform.hpp  transform_basis.cpp  transform_basis.hpp
forge/memory/: defs.hpp  mem_pool.cpp  mem_pool.hpp  virtual_allocator.hpp
forge/resources/: resource.hpp
forge/source/forge/: testjoltc.d
forge/source/forge/concurrency/: util.d
forge/source/forge/container/: string.d  string_view.d
forge/source/forge/core/: engine.d  engine_init_options.d  iservice.d  time.d
forge/source/forge/math/: matrix.d  package.d  quat.d  transform.d  vector.d
forge/source/forge/math/simd/: vector.d
forge/source/forge/mem/: defs.d  mempool.d  utils.d  virtual_mem.d
forge/source/forge/mem/allocators/: fmalloc.d  package.d  statistics.d
forge/source/forge/mem/linux/: virtual_mem.d
forge/source/forge/mem/windows/: virtual_mem.d
forge/system/: io.cpp  io.hpp  window.cpp  window.hpp  window_sub_system.cpp  window_sub_system.hpp
forge/system/linux/: linux_fs_monitor.cpp  linux_fs_monitor.hpp  linux_native_dialog.cpp  linux_system_info.hpp  linux_virtual_memory.cpp  linux_virtual_memory.hpp
forge/util/: macros.hpp
libs/joltc/: dub.json
libs/joltc/example/: app.d
libs/joltc/source/: joltc.d  package.d
libs/mimalloc/: .gitignore  dub.json  libmimalloc.so.2.2
libs/mimalloc/source/: mimalloc.d
src/concurrency/: channel.hpp  command_buffer.hpp
src/config/: arg_parser.cpp  arg_parser.hpp
src/container/: map.hpp  string_id.cpp  virtual_array.hpp
src/core/: engine.cpp  engine.hpp  engine_init_options.hpp  forge_intrinsic.hpp  isub_system.cpp  isub_system.hpp  logging.hpp  result.hpp  type_def.hpp
src/ecs/: component_field.hpp  defs.hpp  ecs.cpp  ecs.hpp  ecs_views.cpp  ecs_views.hpp  macro_warcrimes.hpp  transform.hpp
src/editor/: editor_subsystem.cpp  editor_subsystem.hpp
src/events/: signal.hpp  type_box.hpp
src/fmt/: fmt.cpp
src/framework/: input.cpp  input.hpp
src/framework/components /: camera_component.cpp  camera_component.hpp  register_engine_components.cpp
src/graphics/: camera.cpp  camera.hpp  material.hpp  mesh_primitives.hpp
src/graphics/image/: image.cpp  image.hpp  stb_image.cpp
src/graphics/ogl_renderer/: ogl_render_sub_system.cpp  ogl_render_sub_system.hpp  ogl_renderer.cpp  ogl_renderer.hpp  ogl_shader.cpp  ogl_shader.hpp  ogl_texture.cpp  ogl_texture.hpp  render_resource.hpp
src/gui/: imgui_subsystem.cpp  imgui_subsystem.hpp
src/memory/: arena_allocator.cpp  arena_allocator.hpp  mem_pool.cpp  mem_pool.hpp  mem_utils.hpp
src/resources/: resource.hpp
src/sync/: atomic_scope_lock.hpp
src/system/: fs_monitor.hpp  input_keys.hpp  native_dialog.hpp  system_info.hpp  virtual_memory.hpp  window.cpp  window.hpp  window_sub_system.cpp  window_sub_system.hpp
src/system/linux/: linux_fs_monitor.cpp  linux_fs_monitor.hpp  linux_native_dialog.cpp  linux_native_dialog.hpp  linux_system_info.cpp  linux_virtual_memory.cpp
src/type_box/: type_box.hpp
src/util/: defer.hpp  macros.hpp  random.hpp  types.hpp
tools/: expand_field_gen.py
tools/ForgeHeaderTool/: CMakeLists.txt
